--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -89,6 +89,26 @@ button {
   cursor: pointer;
 }
 
+#modal {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: var(--z-index-modal);
+}
+
+#toast {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: var(--z-index-toast);
+}
+
 .react-calendar {
   margin: 0 2rem !important;
   background-color: rgba(95, 133, 191, 0.4) !important;
