--- a/src/feature/board/component/FullScreenAttachment/FullScreenAttachment.module.css
+++ b/src/feature/board/component/FullScreenAttachment/FullScreenAttachment.module.css
@@ -26,12 +26,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 6rem;
+  padding-bottom: 6rem; /*topContainer로 밑으로 내린 만큼 위로 올려줘야 함*/
+}
+.attachmentsContainer {
+  width: 100%;
+  height: 100%;
+}
+
+.attachmentsSlide {
+  width: 100% !important;
+  height: 100% !important;
+  padding: 0;
+  margin: 0;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
 }
 .attachment {
   max-width: 100%;
-  max-height: 70vh;
-  margin: 0 auto;
+  max-height: 100%;
+  object-fit: contain;
 }
 .videoWrapper {
   width: 100%;
