#1286 [FIX] 설명글 길어지면 썸네일 밀리는 문제 해결
설명글 길어지면 썸네일이 밀림 (작아짐) - 모바일
https://www.notion.so/snorose/2a27ef0aa3bf81848d66c6ff49da8192?source=copy_link

--- a/src/feature/board/component/PostBar/PostBar.module.css
+++ b/src/feature/board/component/PostBar/PostBar.module.css
@@ -12,6 +12,10 @@
   justify-content: space-between;
 }
 
+.postBarLeft {
+  flex: 1;
+}
+
 .postBarTop {
   padding-bottom: 1rem;
   display: flex;
@@ -81,6 +85,14 @@
 }
 
 .thumbnail {
+  width: 7.4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 4.7rem;
+}
+
+.thumbnailImg {
   width: 7.4rem;
   height: 7.4rem;
   border-radius: 0.5rem;
