--- a/src/feature/board/component/AttachmentBar/AttachmentBar.module.css
+++ b/src/feature/board/component/AttachmentBar/AttachmentBar.module.css
@@ -1,15 +1,14 @@
 .bar {
   width: 100%;
-  position: sticky;
+  max-width: var(--default-width);
+  /* Default */
+  position: fixed;
   bottom: 0;
 }
 .attachmentBar {
-  width: 100%;
   height: 7rem;
   background-color: var(--blue-1);
   padding: 2.2rem;
-  position: absolute;
-  bottom: 0;
   display: flex;
   align-items: center;
 }
