#1338 [FEAT] 자주하는 질문 리스트 추가

--- a/src/page/support/FAQPage/FAQPage.module.css
+++ b/src/page/support/FAQPage/FAQPage.module.css
@@ -10,6 +10,10 @@
   white-space: pre-line;
 }
 
+.noticeContainer div {
+  padding-top: 1rem;
+}
+
 /* notice */
 .notice {
   margin: 0 var(--default-margin) 5rem;
@@ -30,4 +34,9 @@
 .notice .listStyleNone {
   padding-left: 0;
   list-style: none;
+}
+
+.title {
+  word-break: break-all;
+  white-space: pre-line;
 }
