--- a/src/shared/component/layout/Sidebar/Sidebar.module.css
+++ b/src/shared/component/layout/Sidebar/Sidebar.module.css
@@ -18,6 +18,7 @@
   width: 80%;
   height: 100%;
   padding-left: 3rem;
+  padding-bottom: 4rem;
   position: absolute;
   right: 0;
   border-radius: 1.5rem 0 0 0;
@@ -27,12 +28,9 @@
 .logo {
   position: sticky;
   top: 0;
-
   display: inline-block;
   width: 100%;
-  padding: 0.6rem 0;
-  margin-top: 2rem;
-
+  padding: 2.6rem 0 0.6rem;
   background-color: white;
 }
 
