#1284 [FIX] url이 '/'인 경우 알림 내용 조회 스타일 추가

--- a/src/feature/alert/component/NotificationItem/NotificationItem.module.css
+++ b/src/feature/alert/component/NotificationItem/NotificationItem.module.css
@@ -59,6 +59,15 @@
   text-overflow: ellipsis;
 }
 
+.contentFull {
+  font: var(--text-body-1-reg);
+
+  white-space: normal;
+  overflow: visible;
+  text-overflow: clip;
+  word-break: break-word;
+}
+
 /* chip */
 
 .category {
