--- a/src/feature/event/component/GuideModal/GuideModal.module.css
+++ b/src/feature/event/component/GuideModal/GuideModal.module.css
@@ -20,6 +20,8 @@
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
   background: var(--blue-0);
   border-radius: 1.5rem;
   width: 90%;
@@ -29,8 +31,6 @@
   padding: 2rem;
   text-align: center;
   position: relative;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
 }
 
@@ -43,6 +43,10 @@
   font: var(--text-headline-1-med);
   color: var(--blue-4);
   word-break: keep-all;
+}
+
+.modalContent {
+  height: 89%;
 }
 
 .illustration {
@@ -67,9 +71,11 @@
 }
 
 .buttons {
+  position: absolute;
+  bottom: 0;
+  width: 90%;
   display: flex;
-  padding: 2rem;
-  z-index: 5;
+  padding: 1.5rem;
   justify-content: space-between;
 }
 
