--- a/src/shared/component/form/Textarea/TextareaFieldBlue.module.css
+++ b/src/shared/component/form/Textarea/TextareaFieldBlue.module.css
@@ -13,25 +13,41 @@
   color: var(--grey-4);
 }
 
-.input {
-  outline: none;
-  padding: 0 1.3rem;
+.textarea {
+  padding: 1.6rem 1.3rem;
 
-  height: 5rem;
+  display: flex;
+  flex-direction: column;
   border-radius: 0.5rem;
   background-color: var(--blue-0);
   border: 1px solid var(--blue-2);
 
   font: var(--text-body-1-reg);
-  color: var(--grey-4);
 
   transition: 100ms ease border-color;
 
-  &:focus {
+  &:focus-within {
     border-color: var(--blue-3);
   }
 
-  &::placeholder {
+  & > textarea {
+    resize: none;
+
+    width: 100%;
+
+    outline: none;
+    border: none;
+    background-color: var(--blue-0);
+    color: var(--grey-4);
+  }
+
+  & > textarea::placeholder {
+    color: var(--grey-3-1);
+  }
+
+  & > div {
+    align-self: flex-end;
+
     color: var(--grey-3-1);
   }
 }
