#1346 [FIX] 안내 모달 버튼 중앙정렬

--- a/src/feature/event/component/GuideModal/GuideModal.module.css
+++ b/src/feature/event/component/GuideModal/GuideModal.module.css
@@ -77,6 +77,8 @@
   display: flex;
   padding: 1.5rem;
   justify-content: space-between;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .goNotice {
