--- a/src/feature/home/component/PopUp/PopUp.module.css
+++ b/src/feature/home/component/PopUp/PopUp.module.css
@@ -24,14 +24,14 @@
 /* top */
 .top {
   flex: 1;
-  padding: 1.6rem;
+  padding: 1.6rem 1.8rem;
   width: 100%;
   height: 100%;
   display: flex;
-  background-color: var(--blue-1);
+  background-color: white;
   border-radius: 0.5rem 0.5rem 0 0;
   overflow: auto;
-  scrollbar-width: thin;
+  scrollbar-width: none;
 }
 
 .top::-webkit-scrollbar {
@@ -60,6 +60,64 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1.6rem;
+}
+
+.popupTitle {
+  color: var(--white);
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: -0.5px;
+  display: flex;
+  width: fit-content;
+  height: 3rem;
+  padding: 0.1rem 1rem;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 5px;
+  background: var(--gradient-5);
+}
+
+.popupContent {
+  color: var(--black);
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: -0.5px;
+}
+
+.popupSectionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.popupSection {
+  display: flex;
+  padding: 1rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.4rem;
+  border-radius: 0.5rem;
+  background: var(--blue-0);
+}
+
+.popupSectionTitle {
+  color: var(--blue-4);
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: -0.5px;
+}
+
+.popupSectionContent {
+  color: var(--grey-4);
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.4;
+  letter-spacing: -0.5px;
 }
 
 /* bottom */
