--- a/src/feature/home/component/PopUp/PopUp.module.css
+++ b/src/feature/home/component/PopUp/PopUp.module.css
@@ -108,90 +108,54 @@
   color: var(--blue-4);
   font-size: 1.3rem;
   font-weight: 500;
-  line-height: 1.4;
-  letter-spacing: -0.5px;
 }
 
 .popupSectionContent {
   color: var(--grey-4);
   font-size: 1.3rem;
   font-weight: 400;
-  line-height: 1.4;
-  letter-spacing: -0.5px;
+}
+
+.popupSectionImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding-top: 0.4rem;
 }
 
 /* bottom */
 .bottom {
-  padding: 0.8rem 1.3rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 0 0 0.5rem 0.5rem;
-  background-color: var(--grey-4);
-  color: var(--white);
-}
-
-.radios {
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
-}
-
-.radio {
-  display: flex;
+  width: 100%;
   align-items: center;
-  gap: 0.8rem;
+  border-radius: 0 0 0.5rem 0.5rem;
+  background-color: var(--white);
+  padding-top: 1.2rem;
 }
 
-.bottom button {
-  padding: 0.3rem 0.8rem;
-  color: var(--white);
-}
-
-.bottom button:hover {
-  border-radius: 0.5rem;
-  background-color: var(--grey-3-1);
-}
-
-.hello {
-  margin-bottom: 1.6rem;
-  display: block;
-}
-
-.link {
+.hideButton {
+  width: 100%;
+  height: 4.8rem;
+  border-top: 1px solid var(--blue-2);
   color: var(--blue-3);
+  font-size: 1.6rem;
 }
 
-.link:hover {
-  text-decoration: underline;
-}
-
-.strong {
-  color: red;
-  font-weight: 500;
-}
-
-.underline {
-  text-decoration: underline;
-}
-
-/* component */
-
-.title {
-  margin-bottom: 0.8rem;
-  font-size: 1.8rem;
-  font-weight: 500;
-}
-
-.subTitle {
-  margin-bottom: 0.8rem;
+.closeButton {
+  width: 100%;
+  height: 4.8rem;
+  border-top: 1px solid var(--blue-2);
+  color: var(--blue-4);
   font-size: 1.6rem;
   font-weight: 500;
 }
 
-.content {
-  margin: 0.8rem 0 3.2rem 0;
-  line-height: 1.4;
-  white-space: pre-wrap;
-  word-break: break-all;
+.bottom button:hover {
+  background: var(--blue-0);
+  overflow: hidden;
+}
+
+.closeButton:hover {
+  border-radius: 0 0 0.5rem 0.5rem;
 }
