--- a/src/feature/home/component/PopUp/PopUpContents.module.css
+++ b/src/feature/home/component/PopUp/PopUpContents.module.css
@@ -38,6 +38,15 @@
   display: list-item;
 }
 
+.popupInfoSectionContent {
+  color: var(--blue-4);
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.6;
+  word-break: keep-all;
+  display: list-item;
+}
+
 .popupSectionImage {
   width: 100%;
   height: 100%;
