--- a/src/feature/home/component/PopUp/PopUp.module.css
+++ b/src/feature/home/component/PopUp/PopUp.module.css
@@ -39,7 +39,7 @@
 }
 
 .top::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.5); /* 스크롤바 색상 */
+  background-color: rgba(0, 0, 0, 0.5);
   border-radius: 0.5rem;
   border: 0.2rem solid var(--blue-1);
 }
@@ -75,10 +75,7 @@
 
 .popupContent {
   color: var(--black);
-  font-size: 1.6rem;
-  font-weight: 500;
-  line-height: 1.4;
-  letter-spacing: -0.5px;
+  font: var(--text-headline-2-med);
 }
 
 .bottom {
@@ -96,7 +93,7 @@
   height: 4.8rem;
   border-top: 1px solid var(--blue-2);
   color: var(--blue-3);
-  font-size: 1.6rem;
+  font: var(--text-headline-2-reg);
 }
 
 .closeButton {
@@ -104,8 +101,7 @@
   height: 4.8rem;
   border-top: 1px solid var(--blue-2);
   color: var(--blue-4);
-  font-size: 1.6rem;
-  font-weight: 500;
+  font: var(--text-headline-2-med);
 }
 
 .bottom button:hover {
