--- a/src/shared/component/layout/CloseAppBar/CloseAppBar.module.css
+++ b/src/shared/component/layout/CloseAppBar/CloseAppBar.module.css
@@ -15,6 +15,8 @@
 
   background-color: var(--white);
   font: var(--text-headline-1-bold);
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 
 .close {
