#1353 [SNO-262] 팝업 디자인QA 반영 (#1355)
* #1353 [DESIGN] 팝업 내 링크 스타일 수정

* #1353 [FEAT] 설명 요소 추가

* #1353 [DESIGN] 팝업 마지막 요소와 버튼 간 간격 조정

* #1353 [FEAT] 링크 클릭시 새페이지를 열지 않도록 수정

* #1353 [DESIGN] 팝업 가장 하단의 info 요소 줄간격 수정

* #1353 [FIX] Link 태그 내부에 to로 수정

* #1353 [DESIGN] 팝업 콘텐츠 리스트 스타일 수정 및 클래스 통합

(cherry picked from commit b86192c14abba933e4632fc6adecfcc5dd17415a)

--- a/src/feature/home/component/PopUp/PopUpContents.module.css
+++ b/src/feature/home/component/PopUp/PopUpContents.module.css
@@ -20,6 +20,12 @@
   font-weight: 500;
 }
 
+.popupSectionContent {
+  color: var(--grey-4);
+  font: var(--text-body-2-reg);
+  word-break: keep-all;
+}
+
 .popupSectionContentList {
   margin: 0;
   padding-left: 1.6rem;
@@ -29,27 +35,17 @@
   list-style-type: disc;
 }
 
-.popupSectionContent {
-  color: var(--grey-4);
-  font-size: 1.3rem;
-  word-break: keep-all;
+.popupSectionListItem {
   display: list-item;
 }
 
-.popupInfoSectionContent {
+.popupSectionInfo {
   color: var(--blue-4);
-  font-size: 1.3rem;
-  line-height: 1.6;
-  word-break: keep-all;
-  display: list-item;
 }
 
 .popupSectionLink {
   color: var(--blue-3);
-  font-weight: 500;
   cursor: pointer;
-}
-.popupSectionLink:hover {
   text-decoration: underline;
 }
 
