--- a/src/page/board/WritePostPage/WritePostPage.module.css
+++ b/src/page/board/WritePostPage/WritePostPage.module.css
@@ -13,6 +13,8 @@
   color: white;
   border-top: 1px solid var(--grey-3-1);
   z-index: 1000;
+  font-size: 15px;
+  font-weight: 500;
 }
 .button:first-child {
   border-right: 1px solid var(--grey-3-1);
