[REFACTOR] #1378 z-index를 글로벌 CSS 변수로 관리

--- a/src/page/board/WritePostPage/WritePostPage.module.css
+++ b/src/page/board/WritePostPage/WritePostPage.module.css
@@ -16,7 +16,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 5000;
+  z-index: var(--z-index-loading);
   background-color: white;
 }
 
