--- a/src/page/board/WritePostPage/WritePostPage.module.css
+++ b/src/page/board/WritePostPage/WritePostPage.module.css
@@ -8,6 +8,18 @@
   justify-content: space-between;
 }
 
+.fetchLoadingContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: var(--z-index-loading);
+  background-color: white;
+}
+
 .center {
   padding: 0 var(--default-margin);
   background-color: var(--blue-0);
