--- a/src/feature/attachment/component/Guideline/Guideline.module.css
+++ b/src/feature/attachment/component/Guideline/Guideline.module.css
@@ -4,7 +4,7 @@
   height: 100vh;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
+  z-index: var(--z-index-toast);
   display: flex;
   flex-direction: column;
 }
