--- a/src/page/board/WritePostPage/WritePostPage.module.css
+++ b/src/page/board/WritePostPage/WritePostPage.module.css
@@ -1,3 +1,47 @@
+.buttons {
+  width: 100%;
+  height: 6rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 2.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  gap: 2.59rem;
+}
+.guideButton1 {
+  width: fit-content;
+  height: 100%;
+  padding: 10px 0px;
+  display: flex;
+  align-items: center;
+  color: white;
+  z-index: var(--z-index-toast);
+  font-size: 15px;
+  font-weight: 500;
+}
+.guideButton1Text {
+  margin-left: 1rem;
+}
+.guideButton2 {
+  width: 5.5rem;
+  height: 3.4rem;
+
+  color: var(--blue-4);
+  background-color: var(--blue-0);
+  border-radius: 1rem;
+  z-index: var(--z-index-toast);
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.guideButton1:hover .guideButton2:hover {
+  cursor: pointer;
+}
+
 .container {
   height: 100vh;
 
