[FIX] #1415 오타 수정 및 색상변수 추가

--- a/src/shared/component/editor/Editor.module.css
+++ b/src/shared/component/editor/Editor.module.css
@@ -1,4 +1,4 @@
-/*에디터 inital style*/
+/*에디터 initial style*/
 :global(.ProseMirror) {
   font: var(--text-headline-2-reg);
   color: var(--grey-4);
@@ -10,7 +10,7 @@
 /*에디터 placeholder style*/
 :global(.ProseMirror p.is-editor-empty:first-child::before) {
   content: attr(data-placeholder);
-  color: #757575;
+  color: var(--grey-placeholder);
   font: var(--text-headline-2-reg);
   pointer-events: none;
   float: left;
