--- a/src/style/variable.css
+++ b/src/style/variable.css
@@ -30,6 +30,7 @@
   --white: #ffffff;
   --black: #000000;
 
+  --grey-placeholder: #757575;
   --grey-3-1-rgb: 137, 137, 137;
   --grey-4-rgb: 72, 72, 72;
   --white-rgb: 255, 255, 255;
