--- a/src/shared/component/editor/Editor.module.css
+++ b/src/shared/component/editor/Editor.module.css
@@ -48,3 +48,47 @@
   border-radius: 4px;
   outline: none;
 }
+
+:global(.ProseMirror) ul {
+  list-style-type: disc;
+  padding-left: 24px;
+  margin: 12px 0;
+}
+
+:global(.ProseMirror) ol {
+  list-style-type: decimal;
+  padding-left: 24px;
+  margin: 12px 0;
+}
+
+:global(.ProseMirror) li {
+  margin: 4px 0;
+}
+
+:global(.ProseMirror) li p {
+  margin: 0;
+}
+
+:global(.ProseMirror) ul ul,
+:global(.ProseMirror) ol ul {
+  list-style-type: circle;
+}
+
+:global(.ProseMirror) ul ol,
+:global(.ProseMirror) ol ol {
+  list-style-type: lower-alpha;
+}
+
+.cancelButton {
+  margin-top: 1rem;
+  color: #0a0a0a;
+  border-radius: 0.375rem;
+  font-size: 0.875rem;
+  cursor: pointer;
+  width: 100%;
+}
+
+.cancelButton:hover {
+  background-color: #d1d5db;
+}
+
